# Polygon-Editor

./: .gitignore  CMakeLists.txt  Edge.cpp  Edge.h  Enums.h  Functions.cpp  Functions.h  Geometry.cpp  Geometry.h  Icon.cpp  Icon.h  ImageProvider.cpp  ImageProvider.h  Main.qml  OffsetPolygon.cpp  OffsetPolygon.h  Painter.cpp  Painter.h  Polygon.cpp  Polygon.h  README.md  SceneManager.cpp  SceneManager.h  Vertex.cpp  Vertex.h  earcut.hpp  main.cpp
src/: Edge.cpp  Edge.h  Enums.h  Functions.cpp  Functions.h  Geometry.cpp  Main.qml  OffsetPolygon.h  Polygon.cpp  Polygon.h  SceneManager.cpp  SceneManager.h  Vertex.h  main.cpp
